--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "create-json-db": "node tools/createMockDb.js",
     "api-server": "json-server tools/db.json -p 3001",
     "start:dev": "webpack-dev-server --config webpack.config.dev.js --port 3002",
-    "start":"run-p start-api start:dev"
+    "start": "run-p start-api start:dev"
   },
   "dependencies": {
     "bootstrap": "4.3.1",
@@ -50,7 +50,7 @@
     "rimraf": "2.6.3",
     "style-loader": "0.23.1",
     "webpack": "4.29.6",
-    "webpack-bundle-analyzer": "3.1.0",
+    "webpack-bundle-analyzer": "3.2.0",
     "webpack-cli": "3.3.0",
     "webpack-dev-server": "3.2.1"
   },
@@ -58,7 +58,9 @@
     "node": ">=8"
   },
   "babel": {
-    "presets": ["babel-preset-react-app"]
+    "presets": [
+      "babel-preset-react-app"
+    ]
   },
   "eslintConfig": {
     "extends": [
